# docer

./: .dockerignore  .env.example  .gitignore  Dockerfile  HUMAN_SPEC.md  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  db.sqlite3  docker_entrypoint.sh  dockerfile  fly.toml  huey.sqlite3  huey.sqlite3-shm  huey.sqlite3-wal  manage.py  pyproject.toml
apps/accounts/: admin.py  forms.py  middleware.py  models.py  services.py  urls.py  views.py
apps/api/: auth.py  permissions.py  serializers.py  urls.py  views.py
apps/canonicalize/: __init__.py  api.py
apps/extraction/: decoders.py  extractor.py  ollama_client.py  prompt.py
apps/files/: admin.py  models.py  services.py
apps/scanners/: admin.py  apps.py  models.py  templates.py
apps/scans/: admin.py  models.py  tasks.py
apps/web/: context.py  forms.py  urls.py  views.py
docer/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: theme.css
templates/: base.html
templates/accounts/: login.html  signup.html
templates/web/: _scan_progress.html  _scan_progress_card.html  _scan_result_panel.html  _schema_field_config.html  _schema_node.html  _schema_node_view.html  api_keys.html  dashboard.html  scan_create.html  scan_detail.html  scanner_detail.html  scanner_form.html  scanner_form_json.html  scanner_list.html
tests/: conftest.py
tests/accounts/: test_signup.py
tests/canonicalize/: test_canonicalize.py
tests/data/: scenarios.json
tests/e2e/: test_scenarios.py
tests/extraction/: test_decoders.py  test_failure_logic.py  test_ollama_client_live.py  test_ollama_client_unit.py  test_prompt.py  (+1 more)
(+25 files in other folders)
